fix Sonar issues (#783)
* fix sonar issues.